@@ -35,20 +35,22 @@ import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
 import static org.hisp.dhis.analytics.OrgUnitField.DEFAULT_ORG_UNIT_FIELD;
 import static org.hisp.dhis.analytics.TimeField.DEFAULT_TIME_FIELDS;
+import static org.hisp.dhis.common.DimensionConstants.ATTRIBUTEOPTIONCOMBO_DIM_ID;
+import static org.hisp.dhis.common.DimensionConstants.CATEGORYOPTIONCOMBO_DIM_ID;
+import static org.hisp.dhis.common.DimensionConstants.DATA_X_DIM_ID;
+import static org.hisp.dhis.common.DimensionConstants.DIMENSION_NAME_SEP;
+import static org.hisp.dhis.common.DimensionConstants.DIMENSION_SEP;
+import static org.hisp.dhis.common.DimensionConstants.OPTION_SEP;
+import static org.hisp.dhis.common.DimensionConstants.ORGUNIT_DIM_ID;
+import static org.hisp.dhis.common.DimensionConstants.PERIOD_DIM_ID;
+import static org.hisp.dhis.common.DimensionConstants.QUERY_MODS_ID_SEPARATOR;
+import static org.hisp.dhis.common.DimensionConstants.VALUE_COLUMN_NAME;
 import static org.hisp.dhis.common.DimensionType.CATEGORY;
 import static org.hisp.dhis.common.DimensionType.CATEGORY_OPTION_GROUP_SET;
 import static org.hisp.dhis.common.DimensionType.DATA_X;
 import static org.hisp.dhis.common.DimensionType.ORGANISATION_UNIT;
 import static org.hisp.dhis.common.DimensionType.ORGANISATION_UNIT_GROUP_SET;
 import static org.hisp.dhis.common.DimensionType.PERIOD;
-import static org.hisp.dhis.common.DimensionalObject.ATTRIBUTEOPTIONCOMBO_DIM_ID;
-import static org.hisp.dhis.common.DimensionalObject.CATEGORYOPTIONCOMBO_DIM_ID;
-import static org.hisp.dhis.common.DimensionalObject.DATA_X_DIM_ID;
-import static org.hisp.dhis.common.DimensionalObject.DIMENSION_SEP;
-import static org.hisp.dhis.common.DimensionalObject.ORGUNIT_DIM_ID;
-import static org.hisp.dhis.common.DimensionalObject.PERIOD_DIM_ID;
-import static org.hisp.dhis.common.DimensionalObject.QUERY_MODS_ID_SEPARATOR;
-import static org.hisp.dhis.common.DimensionalObject.VALUE_COLUMN_NAME;
 import static org.hisp.dhis.common.DimensionalObjectUtils.asList;
 import static org.hisp.dhis.common.DimensionalObjectUtils.getList;
 import static org.hisp.dhis.program.AnalyticsType.EVENT;
@@ -77,6 +79,7 @@ import java.util.stream.Stream;
 import javax.annotation.Nullable;
 import org.apache.commons.collections4.MultiValuedMap;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.hisp.dhis.analytics.table.model.Partitions;
 import org.hisp.dhis.analytics.util.AnalyticsUtils;
 import org.hisp.dhis.category.Category;
@@ -114,6 +117,7 @@ import org.hisp.dhis.organisationunit.OrganisationUnit;
 import org.hisp.dhis.organisationunit.OrganisationUnitGroupSet;
 import org.hisp.dhis.organisationunit.OrganisationUnitLevel;
 import org.hisp.dhis.period.Period;
+import org.hisp.dhis.period.PeriodDimension;
 import org.hisp.dhis.period.PeriodType;
 import org.hisp.dhis.period.comparator.DescendingPeriodComparator;
 import org.hisp.dhis.program.AnalyticsType;
@@ -684,9 +688,9 @@ public class DataQueryParams {
   }
 
   /** Returns the latest period based on the period end date. */
-  public Period getLatestPeriod() {
+  public PeriodDimension getLatestPeriod() {
     return getAllPeriods().stream()
-        .map(Period.class::cast)
+        .map(PeriodDimension.class::cast)
         .min(DescendingPeriodComparator.INSTANCE)
         .orElse(null);
   }
@@ -699,7 +703,9 @@ public class DataQueryParams {
     // building a Stream<Stream<Date>> to make things easier later
     return Stream.of(
             streamOfOrEmpty(endDate),
-            getAllPeriods().stream().map(Period.class::cast).map(Period::getEndDate),
+            getAllPeriods().stream()
+                .map(PeriodDimension.class::cast)
+                .map(PeriodDimension::getEndDate),
             getTimeDateRanges().values().stream()
                 .flatMap(Collection::stream)
                 .map(DateRange::getEndDate))
@@ -717,7 +723,9 @@ public class DataQueryParams {
     // building a Stream<Stream<Date>> to make things easier later
     return Stream.of(
             streamOfOrEmpty(startDate),
-            getAllPeriods().stream().map(Period.class::cast).map(Period::getStartDate),
+            getAllPeriods().stream()
+                .map(PeriodDimension.class::cast)
+                .map(PeriodDimension::getStartDate),
             getTimeDateRanges().values().stream()
                 .flatMap(Collection::stream)
                 .map(DateRange::getStartDate))
@@ -754,7 +762,7 @@ public class DataQueryParams {
     List<DimensionalItemObject> filterPeriods = getFilterPeriods();
 
     if (!filterPeriods.isEmpty()) {
-      return ((Period) filterPeriods.get(0)).getPeriodType();
+      return ((PeriodDimension) filterPeriods.get(0)).getPeriodType();
     }
 
     return null;
@@ -762,7 +770,10 @@ public class DataQueryParams {
 
   /** Returns the filter periods as period objects. */
   public List<Period> getTypedFilterPeriods() {
-    return getFilterPeriods().stream().map(Period.class::cast).collect(Collectors.toList());
+    return getFilterPeriods().stream()
+        .map(PeriodDimension.class::cast)
+        .map(PeriodDimension::getPeriod)
+        .toList();
   }
 
   /** Returns a list of dimensions which occur more than once, not including the first duplicate. */
@@ -870,23 +881,23 @@ public class DataQueryParams {
 
     if (dataPeriodType != null) {
       for (DimensionalItemObject aggregatePeriod : getDimensionOrFilterItems(PERIOD_DIM_ID)) {
-        Period dataPeriod =
-            dataPeriodType.createPeriod(
-                ((Period) aggregatePeriod).getStartDate(),
-                ((Period) aggregatePeriod).getDateField());
+        PeriodDimension dataPeriod =
+            PeriodDimension.of(
+                    dataPeriodType.createPeriod(((PeriodDimension) aggregatePeriod).getStartDate()))
+                .setDateField(((PeriodDimension) aggregatePeriod).getDateField());
 
         map.putValue(dataPeriod, aggregatePeriod);
 
-        if (((Period) aggregatePeriod).getPeriodType().spansMultipleCalendarYears()) {
+        if (((PeriodDimension) aggregatePeriod).getPeriodType().spansMultipleCalendarYears()) {
           // When dealing with a period that spans multiple years, add
           // a second aggregated year
           // corresponding to the second part of the financial year so
           // that the query will count both years.
 
-          Period endYear =
-              dataPeriodType.createPeriod(
-                  ((Period) aggregatePeriod).getEndDate(),
-                  ((Period) aggregatePeriod).getDateField());
+          PeriodDimension endYear =
+              PeriodDimension.of(
+                      dataPeriodType.createPeriod(((PeriodDimension) aggregatePeriod).getEndDate()))
+                  .setDateField(((PeriodDimension) aggregatePeriod).getDateField());
           map.putValue(endYear, aggregatePeriod);
         }
       }
@@ -1029,7 +1040,7 @@ public class DataQueryParams {
   /** Returns all dimensions except any period dimension. */
   public List<DimensionalObject> getNonPeriodDimensions() {
     List<DimensionalObject> dims = new ArrayList<>(dimensions);
-    dims.remove(new BaseDimensionalObject(DimensionalObject.PERIOD_DIM_ID));
+    dims.remove(new BaseDimensionalObject(PERIOD_DIM_ID));
     return List.copyOf(dims);
   }
 
@@ -1086,7 +1097,7 @@ public class DataQueryParams {
   private static List<DimensionalItemObject> getItems(
       Collection<DimensionalObject> dimensionalObjects, String key) {
     return dimensionalObjects.stream()
-        .filter(dimensionalObject -> StringUtils.equals(dimensionalObject.getDimension(), key))
+        .filter(dimensionalObject -> Strings.CS.equals(dimensionalObject.getDimension(), key))
         .map(DimensionalObject::getItems)
         .flatMap(Collection::stream)
         .toList();
@@ -1194,18 +1205,18 @@ public class DataQueryParams {
 
       Assert.isTrue(!periods.isEmpty(), "At least one period must exist");
 
-      Period period = (Period) periods.get(0);
+      PeriodDimension period = (PeriodDimension) periods.get(0);
 
-      return period.getDaysInPeriod();
+      return period.getPeriod().getDaysInPeriod();
     } else if (hasFilter(PERIOD_DIM_ID)) {
       List<DimensionalItemObject> periods = getFilterPeriods();
 
       int totalDays = 0;
 
       for (DimensionalItemObject item : periods) {
-        Period period = (Period) item;
+        PeriodDimension period = (PeriodDimension) item;
 
-        totalDays += period.getDaysInPeriod();
+        totalDays += period.getPeriod().getDaysInPeriod();
       }
 
       return totalDays;
@@ -1866,10 +1877,10 @@ public class DataQueryParams {
 
     Map<MeasureFilter, Double> map = new EnumMap<>(MeasureFilter.class);
 
-    String[] criteria = param.split(DimensionalObject.OPTION_SEP);
+    String[] criteria = param.split(OPTION_SEP);
 
     for (String c : criteria) {
-      String[] criterion = c.split(DimensionalObject.DIMENSION_NAME_SEP);
+      String[] criterion = c.split(DIMENSION_NAME_SEP);
 
       if (criterion.length == 2 && MathUtils.isNumeric(criterion[1])) {
         MeasureFilter filter = MeasureFilter.valueOf(criterion[0]);
